src/scss/ui/btn.scss
.btn {
  box-sizing: border-box;
  position: relative;
  bottom: 0;
  display: inline-flex;
  place-items: center;
  text-decoration: none;
  vertical-align: middle;
  line-height: $font-base-lh;
  text-align: center;
  border: 1px solid transparent;
  max-width: 100%;
  opacity: 1;
  transition: background var(--trans-base), color var(--trans-base);
  text-overflow: ellipsis;
  user-select: none;
  isolation: isolate;

  // states
  &:hover:not(:disabled),
  &:hover:not(.is-disabled) {
    text-decoration: none;
    cursor: pointer;
  }

  &:is(:active, .is-active) {
    outline: none;
    scale: 0.98;
  }

  &:is(:disabled, .is-disabled) {
    cursor: default;
    opacity: 0.7;
  }

  &.is-load {
    pointer-events: none;
    opacity: 0.7;
  }

  &.is-load &__loader {
    opacity: 1;
  }

  @include media(animate) {
    &.is-load &__loader {
      animation: scale 1s linear infinite;
    }
  }

  &.is-load &__text {
    opacity: 0;
  }

  // vars
  &--var-primary {
    background: var(--color-black);
    color: var(--color-white);
  }

  &--var-secondary {
    background: transparent;
    border-color: var(--color-black);
    color: var(--color-black);
  }

  // sizes
  &--size-base,
  &--size-md {
    @include btn-base;
    min-height: var(--field-md);
    min-width: var(--field-md);
    padding-inline: rem(32);
  }

  &--size-sm {
    @include btn-base;
    min-height: var(--field-sm);
    min-width: var(--field-sm);
    padding-inline: rem(32);
  }

  &--size-lg {
    @include btn-base;
    min-height: var(--field-lg);
    min-width: var(--field-lg);
    padding-inline: rem(32);
  }

  // mods
  &--fluid {
    width: 100%;
    display: flex;
  }

  &--square {
    padding-inline: 0;
  }

  // elements
  &__loader,
  &__text {
    pointer-events: none;
  }

  &__loader {
    @include square(1.5cap);
    position: absolute;
    top: 50%;
    left: 50%;
    background: currentColor;
    border-radius: 50%;
    translate: -50% -50%;
    transform-origin: center;
    animation: scale 1s linear infinite;
    opacity: 0;
  }
}

